# learncpp

./: CMakeLists.txt
data/: test_txt.txt
include/: magicSquare.hpp  openTxt.hpp  vectors.hpp
src/: magicSquare.cpp  main.cpp  openTxt.cpp  vectors.cpp
